@@ -4,6 +4,7 @@ Revision history for Test::Apocalypse
 
 	Tweak how we skip/disable plugins because of the recent subtest change, I broke some stuff :(
 	I give up on the Pod::No404s test, the internet is too flaky everywhere :(
+	Removed the OutdatedPrereqs test because I now use Dist::Zilla::Plugin::PromptIfStale, thanks ETHER!
 
 1.003	2014-10-25 00:12:08 UTC
 
